1. Add Search Tips 2. Fix pagination display on mobile

--- a/client/assets/components/paginate/_paginate.scss
+++ b/client/assets/components/paginate/_paginate.scss
@@ -1,4 +1,5 @@
 .pagination.menu-bar {
+  margin-bottom: 1em;
   justify-content: center;
   li {
     max-width: 2.5em;
@@ -17,6 +18,9 @@
     a {
       color: #fff;
       border: 1px solid #A29060;
+    }
+    a:hover {
+      color: #4B4B4B;
     }
   }
 }
